# learning-path

./: pyproject.toml
1-fgv-systems-analysis/1-2-1-introducao-programacao/: exemplos.py
2-usp-data-science/2-1-2-introducao-programacao-python/arquivos_aula/: (1) Introdução Programação Python.ipynb  (3) SCRIPT - Tradutor de Comentários.py
